--- a/zcwptrading-engine/pom.xml
+++ b/zcwptrading-engine/pom.xml
@@ -1,6 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.zhoucong.exchange</groupId>
-  <artifactId>zcwptrading-engine</artifactId>
-  <version>1.0</version>
+  
+	<parent>
+		<groupId>com.zhoucong.exchange</groupId>
+		<artifactId>zcwpparent</artifactId>
+		<version>1.0</version>
+		<relativePath>../zcwpparent/pom.xml</relativePath>
+	</parent>
+	
+	<artifactId>zcwptrading-engine</artifactId>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zhoucong.exchange</groupId>
+			<artifactId>zcwpcommon</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
