--- a/zcwppush/pom.xml
+++ b/zcwppush/pom.xml
@@ -19,8 +19,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.itranswarp.exchange</groupId>
-			<artifactId>common</artifactId>
+			<groupId>com.zhoucong.exchange</groupId>
+			<artifactId>zcwpcommon</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
